# svd2cpp

./: .gitignore  Cargo.toml  LICENSE  README.md  game.html  output.hpp  pyproject.toml
demo/: app.hex  meson.build  run.sh
demo/cross/: stm32f767zi.ini
demo/linker/: stm32f767zi.ld
demo/modern/cross/: stm32f767zi.ini
demo/modern/src/: main.cpp  startup.cpp  stm32f767.hpp
demo/src/: delay.hpp  main.cpp  main_reference.cpp  register.hpp  register_traits.hpp  startup.cpp
demo/src/STM32F7/: linker.ld  syscalls.c  system.c
demo/typical/: README.md  meson.build  run.sh
demo/typical/cross/: stm32f767zi.ini
demo/typical/src/: main.cpp  startup.cpp  stm32f767.hpp
doc/: articles.md
src/: generator.rs  helper.py  main.rs  parser.rs  register.hpp  svd2cpp.py  svdParser.py  svdReader.py  svd_file.rs  svd_parser.py  svd_types.py  xml2json.py  xml_helper.py
src/templates/: svd_template.jinja
svd/: stm32f767.svd.patched  stm32f7x7_modified.json
templates/: pac.hpp
